--- a/Lab1_p1_FINAL.ipynb
+++ b/Lab1_p1_FINAL.ipynb
@@ -23978,7 +23978,7 @@
     "\"RI\",\"SC\",\"SD\",\"TN\",\"TX\",\"UT\",\"VT\",\"VA\",\n",
     "\"WA\",\"WV\",\"WI\",\"WY\")\n",
     "\n",
-    "#ll.visited <- geocode(visited)\n",
+    "ll.visited <- geocode(visited)\n",
     "#save(ll.visited,file=\"visited.Rda\")\n",
     "\n",
     "#Using the saved geocode of the 50 states due to the geocode utilization limit.\n",
